--- a/smart.css
+++ b/smart.css
@@ -1,2 +1,5 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap')
+.selected-seats{
+    padding: 10px;
+    display: flex;
+    justify-content: space-around;
+}
